@@ -7,6 +7,7 @@
   * Fixed a problem with base tags.  ありがとう Keisuke
   * HEAD requests do not record in the history
   * Default encoding to ISO-8859-1 instead of ASCII
+  * Requests with URI instances should not be polluted RF #23472
 
 === 0.9.0
 
